# cookbook

app/backend/: Dockerfile  docker-compose-dev.yml  lint.sh  pyproject.toml
app/backend/cookbook/: bindings.py  main.py
app/backend/cookbook/adapters/auth0/: authenticator.py  constants.py  models.py
app/backend/cookbook/adapters/local_test_dict/: recipe.py
app/backend/cookbook/adapters/sql/recipe/: models.py  repository.py
app/backend/cookbook/adapters/sql/user/: models.py  repository.py
app/backend/cookbook/application/: recipe_service.py  user_service.py
app/backend/cookbook/domain/authentication/: repository.py
app/backend/cookbook/domain/recipe/: models.py  repository.py
app/backend/cookbook/domain/user/: repository.py
app/backend/cookbook/ports/: bindings_schema.py  fastapi_app.py
app/backend/cookbook/ports/api/v1/: __init__.py  main.py  recipes.py  users.py
app/backend/cookbook/ports/dependencies/: common.py
app/backend/cookbook/ports/schemas/: recipe.py
app/backend/src/adapters/auth0/: authenticator.py  models.py
app/backend/src/adapters/local_test_dict/: recipe.py
app/backend/src/adapters/sql/recipe/: models.py
app/backend/src/application/: recipe_service.py  user_service.py
app/backend/src/domain/authentication/: models.py  repository.py
app/backend/src/domain/recipe/: models.py  repository.py
app/backend/src/domain/user/: models.py  repository.py
app/backend/src/ports/: main.py
app/backend/src/ports/bindings/: __init__.py  bindings_schema.py
app/backend/src/ports/schemas/: recipe.py  user.py
(+41 files in other folders)
